cabal-version:       3.4
-- Newer versions complain
name:                archery
version:             0.1.0.0
-- synopsis:
description:         Playing with arrows 
homepage:            https://github.com/danwdart/projects#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:
                     README.md

common shared-properties-base
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
  ghcjs-options:       -dedupe

common shared-properties-lib
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Werror
    -haddock
  build-depends:       base >= 4.18.0.0 && < 5
  default-extensions:
    NoGeneralizedNewtypeDeriving

common shared-properties-unsafe
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.18.0.0 && < 5
  default-extensions:
    NoGeneralizedNewtypeDeriving

common shared-properties-safe
  import: shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe

common shared-properties-nobase
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N

-- TODO: unsafe?
library
  import: shared-properties-lib
  --ghc-options: -Wno-unused-packages
  hs-source-dirs:      lib
  build-depends: base >= 4.18.0.0 && < 5
               , aeson
               , bytestring
               , process
               , text
  exposed-modules:
    Control.Category.Execute.Haskell
    Control.Category.Execute.JSON
    Control.Category.Execute.Stdio
    Control.Category.LambdaCalculus.BCKW
    Control.Category.LambdaCalculus.SKI
    Control.Category.Primitive.Abstract
    Control.Category.Primitive.Console
    Control.Category.Primitive.Curried
    Control.Category.Primitive.Interpret
    Control.Category.Primitive.JSON
    Control.Category.Primitive.Stdio
    Control.Category.Apply
    Control.Category.Cartesian
    Control.Category.Choice
    Control.Category.Cocartesian
    Control.Category.Cochoice
    Control.Category.Costrong
    Control.Category.Curry
    Control.Category.Interpret
    Control.Category.Numeric
    Control.Category.Strong
    Control.Category.Symmetric
    Control.Category.Utilities
    Data.Code.Haskell.Func
    Data.Code.Haskell.Lamb
    Data.Code.JS.Lamb
    Data.Code.PHP.Lamb
    Data.Function.Free.LambdaCalculus.BCKW
    Data.Function.Free.LambdaCalculus.SKI
    Data.Function.Free.Abstract
    Data.Function.Greet
    Data.Function.IsPalindrome
    Data.Function.CollatzStep
    Data.Function.ReverseInput
    Data.Primitive.Prims
    Data.Primitive.PrimsConsole
    Data.Primitive.PrimsFile
    Data.Tuple.Triple
    Data.Render

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, hspec, QuickCheck
  other-modules:       Data.Code.Haskell.FuncSpec
                       Data.Code.Haskell.LambSpec
                       Data.Code.JS.LambSpec
                       Data.Code.PHP.LambSpec
                       Data.Function.Free.AbstractSpec
                       Data.Primitive.PrimsSpec