cabal-version:       3.4
-- Newer versions complain
name:                archery
version:             0.1.0.0
-- synopsis:
description:         Playing with arrows 
homepage:            https://github.com/danwdart/projects#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:
                     README.md

common shared-properties-base
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
  ghcjs-options:       -dedupe

common shared-properties-lib
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Werror
    -haddock
  build-depends:       base >= 4.18.0.0 && < 5
  default-extensions:
    NoGeneralizedNewtypeDeriving

common shared-properties-unsafe
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.18.0.0 && < 5
  default-extensions:
    NoGeneralizedNewtypeDeriving

common shared-properties-safe
  import: shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe

common shared-properties-nobase
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N

-- TODO: unsafe?
library
  import: shared-properties-lib
  --ghc-options: -Wno-unused-packages
  hs-source-dirs:      lib
  build-depends: base >= 4.18.0.0 && < 5
               , aeson
               , bytestring
               , containers
               , process
               -- , text
               -- , yaml
  exposed-modules:
    Control.Category.Apply
    Control.Category.Bracket
    Control.Category.Cartesian
    Control.Category.Choice
    Control.Category.Cocartesian
    Control.Category.Cochoice
    Control.Category.Costrong
    Control.Category.Curry
    Control.Category.Execute.Haskell
    Control.Category.Execute.JSON
    Control.Category.Execute.Stdio
    -- Control.Category.Generic
    Control.Category.Interpret
    Control.Category.LambdaCalculus.BCKW
    Control.Category.LambdaCalculus.SKI
    Control.Category.Numeric
    Control.Category.Primitive.Abstract
    Control.Category.Primitive.Console
    Control.Category.Primitive.Curried
    Control.Category.Primitive.Extra
    Control.Category.Primitive.Interpret
    Control.Category.Primitive.JSON
    Control.Category.Primitive.Stdio
    Control.Category.Strong
    Control.Category.Symmetric
    Data.Function.Utilities
    Data.Code.Haskell.Func
    Data.Code.Haskell.Lamb
    Data.Code.Haskell.Program
    Data.Code.JS.Lamb
    Data.Code.PHP.Lamb
    Data.Function.Free.LambdaCalculus.BCKW
    Data.Function.Free.LambdaCalculus.SKI
    Data.Function.Free.Abstract
    Data.Primitive.Prims
    Data.Primitive.PrimsConsole
    Data.Primitive.PrimsFile
    Data.Render
    System.Executable

executable jcat2hsf
  import: shared-properties-unsafe
  main-is:             jcat2hsf.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring

executable jcat2hsl
  import: shared-properties-unsafe
  main-is:             jcat2hsl.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring

executable jcat2js
  import: shared-properties-unsafe
  main-is:             jcat2js.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring

executable jcat2php
  import: shared-properties-unsafe
  main-is:             jcat2php.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring

executable jcat2ycat
  import: shared-properties-unsafe
  main-is:             jcat2ycat.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable jcatc
  import: shared-properties-unsafe
  main-is:             jcatc.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring

executable runjcat
  import: shared-properties-unsafe
  main-is:             runjcat.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring

executable runycat
  import: shared-properties-unsafe
  main-is:             runycat.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycat2hsf
  import: shared-properties-unsafe
  main-is:             ycat2hsf.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycat2hsl
  import: shared-properties-unsafe
  main-is:             ycat2hsl.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycat2jcat
  import: shared-properties-unsafe
  main-is:             ycat2jcat.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycat2js
  import: shared-properties-unsafe
  main-is:             ycat2js.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycat2php
  import: shared-properties-unsafe
  main-is:             ycat2php.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycatc
  import: shared-properties-unsafe
  main-is:             ycatc.hs
  build-depends:       base >= 4.18.0.0 && < 5, aeson, archery, bytestring, yaml

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, NoGeneralizedNewtypeDeriving
  build-depends:       base >= 4.18.0.0 && < 5
                     , aeson
                     , archery
                     , hspec
                     , QuickCheck
  other-modules:       Data.Code.Haskell.FuncSpec
                       Data.Code.Haskell.LambSpec
                       Data.Code.JS.LambSpec
                       Data.Code.PHP.LambSpec
                       Data.Function.Free.AbstractSpec
                       Data.Primitive.PrimsSpec

test-suite test-examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples/lib, examples/test
  main-is:             Spec.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, NoGeneralizedNewtypeDeriving
  build-depends:       base >= 4.18.0.0 && < 5
                     , aeson
                     , archery
                     , hspec
                     , QuickCheck
  other-modules:       Control.Category.Primitive.Person
                       Control.Category.Primitive.PersonSpec
                       Data.Function.CollatzStep
                       Data.Function.CollatzStepSpec
                       Data.Function.Greet
                       Data.Function.GreetSpec
                       Data.Function.IsPalindrome
                       Data.Function.IsPalindromeSpec
                       Data.Function.ReverseInput
                       Data.Function.ReverseInputSpec
                       Data.Person
                       Data.PersonSpec
                       Data.Primitive.PrimPerson
                       Data.Primitive.PrimPersonSpec