cabal-version:       3.0
name:                boardgames
version:             0.1.0.0
homepage:            https://github.com/danwdart/dansstuff#readme
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe

executable 10x10grid
  import: shared-properties
  main-is:             10x10grid.hs
  build-depends:       base >= 4.7 && < 5, bifunctors, MonadRandom

executable 2048
  import: shared-properties
  main-is:             2048.hs
  build-depends:       base >= 4.7 && < 5, MonadRandom, random

executable battleships
  import: shared-properties
  main-is:             battleships.hs
  
executable frog
  import: shared-properties
  main-is:             frog.hs
  build-depends:       base >= 4.7 && < 5, random

executable minesweeper
  import: shared-properties
  main-is:             minesweeper.hs

executable monopoly
  import: shared-properties
  main-is:             monopoly.hs
  build-depends:       base >= 4.7 && < 5, containers, random
  other-modules:       Lib.Game.Monopoly.Addons
    , Lib.Game.Monopoly.Board
    , Lib.Game.Monopoly.Colour
    , Lib.Game.Monopoly.Game
    , Lib.Game.Monopoly.Helpers
    , Lib.Game.Monopoly.Player
    , Lib.Game.Monopoly.Property
    , Lib.Game.Monopoly.Random
    , Lib.Game.Monopoly.Rules
    , Lib.Game.Monopoly.Space
    , Lib.Game.Monopoly.Station
    , Lib.Game.Monopoly.Tax
    , Lib.Game.Monopoly.Token
    , Lib.Game.Monopoly.Utility

--executable razzledazzle
--  hs-source-dirs:      src
--  main-is:             razzledazzle.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5, monad-loops, probability, random, rando, utility-ht

executable scrabble
  import: shared-properties
  main-is:             scrabble.hs

executable ur
  import: shared-properties
  main-is:             ur.hs
