cabal-version:       3.0
-- Newer versions complain
name:                boardgames
version:             0.1.0.0
homepage:            https://github.com/danwdart/dansstuff#readme
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs: lib
  default-language:    Haskell2010
  build-depends:       base >= 4.15 && < 5, containers
  exposed-modules:
      Game.Bounce
    , Game.Monopoly.Addons
    , Game.Monopoly.Board
    , Game.Monopoly.Colour
    , Game.Monopoly.Game
    , Game.Monopoly.Helpers
    , Game.Monopoly.Player
    , Game.Monopoly.Property
    , Game.Monopoly.Random
    , Game.Monopoly.Rules
    , Game.Monopoly.Space
    , Game.Monopoly.Station
    , Game.Monopoly.Tax
    , Game.Monopoly.Token
    , Game.Monopoly.Utility

common shared-properties
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.15 && < 5
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe

executable 1010
  import: shared-properties
  main-is:             1010.hs
  build-depends:       base >= 4.15 && < 5, containers, MonadRandom

executable 10x10grid
  import: shared-properties
  main-is:             10x10grid.hs
  build-depends:       base >= 4.15 && < 5, bifunctors, MonadRandom

executable 2048
  import: shared-properties
  main-is:             2048.hs
  build-depends:       base >= 4.15 && < 5, MonadRandom, random

executable bounce
  import: shared-properties
  main-is:             bounce.hs
  build-depends:       base >= 4.15 && < 5, boardgames

executable frog
  import: shared-properties
  main-is:             frog.hs
  build-depends:       base >= 4.15 && < 5, random

executable monopoly
  import: shared-properties
  main-is:             monopoly.hs
  build-depends:       base >= 4.15 && < 5, boardgames, containers, random

--executable razzledazzle
--  hs-source-dirs:      src
--  main-is:             razzledazzle.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.15 && < 5, monad-loops, probability, random, rando, utility-ht

test-suite boardgames-test
  import: shared-properties
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
    Game.BounceSpec
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
      base >= 4.15 && < 5
    , boardgames
    , hspec
    , hspec-core
    , hspec-expectations
    , QuickCheck