cabal-version:       3.4
-- Newer versions complain
name:                boardgames
version:             0.1.0.0
homepage:            https://github.com/danwdart/dansstuff#readme
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs: lib
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:       base >= 4.17 && < 5, containers
  exposed-modules:
      Game.Bounce
    , Game.Monopoly.Addons
    , Game.Monopoly.Board
    , Game.Monopoly.Colour
    , Game.Monopoly.Game
    , Game.Monopoly.Helpers
    , Game.Monopoly.Player
    , Game.Monopoly.Property
    , Game.Monopoly.Random
    , Game.Monopoly.Rules
    , Game.Monopoly.Space
    , Game.Monopoly.Station
    , Game.Monopoly.Tax
    , Game.Monopoly.Token
    , Game.Monopoly.Utility
  ghc-options:         -Wall -Werror 
                       -Weverything
                       -Wno-unsafe -Wno-safe
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-implicit-prelude
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-kind-signatures
                       -Wno-prepositive-qualified-module
                       -Wno-missing-local-signatures

common shared-properties
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:       base >= 4.17 && < 5
  ghc-options:         -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
                       -Weverything
                       -Wno-unsafe -Wno-safe
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-implicit-prelude
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-kind-signatures
                       -Wno-prepositive-qualified-module
                       -Wno-missing-local-signatures
  ghcjs-options:       -dedupe

executable 1010
  import: shared-properties
  main-is:             1010.hs
  build-depends:       base >= 4.17 && < 5, containers

executable 10x10grid
  import: shared-properties
  main-is:             10x10grid.hs
  build-depends:       base >= 4.17 && < 5, bifunctors, MonadRandom

executable 2048
  import: shared-properties
  main-is:             2048.hs
  build-depends:       base >= 4.17 && < 5, MonadRandom

executable bounce
  import: shared-properties
  main-is:             bounce.hs
  build-depends:       base >= 4.17 && < 5

executable frog
  import: shared-properties
  main-is:             frog.hs
  build-depends:       base >= 4.17 && < 5, containers, MonadRandom

executable hangman
  import: shared-properties
  main-is:             hangman.hs
  build-depends:       base >= 4.17 && < 5

executable monopoly
  import: shared-properties
  main-is:             monopoly.hs
  build-depends:       base >= 4.17 && < 5, boardgames, containers, random

--executable razzledazzle
--  hs-source-dirs:      src
--  main-is:             razzledazzle.hs
--  --  build-depends:       base >= 4.17 && < 5, monad-loops, probability, random, rando, utility-ht

executable sudoku
  import: shared-properties
  main-is:             sudoku.hs
  build-depends:       base >= 4.17 && < 5, containers, extra, lattices, vector

test-suite boardgames-test
  import: shared-properties
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
    Game.BounceSpec
  -- build-tool-depends:
  --   hspec-discover:hspec-discover == 2.*
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:
      base >= 4.17 && < 5
    , boardgames
    , hspec
    -- , hspec-core
    -- , hspec-expectations
    , QuickCheck