cabal-version:      2.4
name:               cards-ui
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-source-files: CHANGELOG.md
data-dir:           data
data-files:
  css/*.css
  img/*.png
  index.html

common shared-properties
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:      base >=4.14.3.0 && <5
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude

  -- -Wno-missing-safe-haskell-mode
  -- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -- only works on recent ghc
  --                       -Wno-missing-local-signatures
  ghcjs-options:      -dedupe
  cpp-options:        -DGHCJS_BROWSER

library
  hs-source-dirs: lib
  import:         shared-properties
  build-depends:  base >=4.14.3.0 && <5

executable cards-ui
  import:        shared-properties
  main-is:       Main.hs
  build-depends:
    , base        >=4.14.3.0 && <5
    , reflex-dom
