cabal-version:      3.12
name:               cards-ui
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-source-files: CHANGELOG.md
data-dir:           data
data-files:
  css/*.css
  img/*.png
  index.html

common shared-properties
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
  build-depends:      base ^>=4.22

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude

  -- -Wno-missing-safe-haskell-mode
  -- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -- only works on recent ghc
  --                       -Wno-missing-local-signatures
  ghcjs-options:      -dedupe
  cpp-options:        -DGHCJS_BROWSER

library
  hs-source-dirs: lib
  import:         shared-properties
  build-depends:  base >=4.21

executable cards-ui
  import:        shared-properties
  main-is:       Main.hs
  build-depends:
    , base        >=4.21
    , reflex-dom  ^>=0.6.3.3
