cabal-version:      3.14

-- Newer versions complain
name:               cards
version:            0.2.0.0

-- synopsis:
-- description:
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only

-- license-file:        LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base ^>=4.22

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

library
  hs-source-dirs:     lib

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , ansi-terminal  ^>=1.1.2
    , base           ^>=4.22
    , containers     ^>=0.8
    , extra          ^>=1.8
    , MonadRandom    ^>=0.6.1
    , random         ^>=1.3.1

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe
  exposed-modules:
    ANSI
    Card
    Data.Enum.Extra
    Data.List.Pairs
    Data.Statistics
    Deck
    Instances
    Ordering
    Shuffle
    Suit.Bounded.Standard
    Suit.Class
    Suit.Unbounded
    Symbol
    Uno.Action.Bounded
    Uno.Action.Class
    Uno.Action.Unbounded
    Uno.Card
    Uno.Colour.Bounded
    Uno.Colour.Class
    Uno.Colour.Unbounded
    Uno.Value.Bounded
    Uno.Value.Class
    Uno.Value.Unbounded
    Uno.Wild.Bounded
    Uno.Wild.Class
    Uno.Wild.Unbounded
    Value.Bounded.Jill
    Value.Bounded.Number
    Value.Bounded.Standard
    Value.Class
    Value.Unbounded

executable bugger
  import:        shared-properties

  -- deferred-folds is screwy on wasm
  if arch(wasm32)
    buildable: False

  main-is:       bugger.hs
  build-depends:
    , base                    ^>=4.22
    , MonadRandom             ^>=0.6.1
    , perfect-vector-shuffle  ^>=0.1.1.2
    , primitive               ^>=0.9
    , vector                  ^>=0.13.2
    , vector-extras           ^>=0.3

-- , random                 ^>=1.3.1
executable cards
  import:        shared-properties

  -- no clock nor getpid
  if arch(wasm32)
    buildable: False

  main-is:       cards.hs
  build-depends:
    , base            ^>=4.22
    , cards           ^>=0.2
    , containers      ^>=0.8
    , extra           ^>=1.8
    , MonadRandom     ^>=0.6.1
    , random-shuffle  ^>=0.0.4
    , utility-ht      ^>=0.0.17.2

executable demo
  import:        shared-properties
  main-is:       demo.hs
  build-depends:
    , base   ^>=4.22
    , cards  ^>=0.2
    , extra  ^>=1.8

executable ohsol
  import:        shared-properties

  -- no clock nor getpid
  if arch(wasm32)
    buildable: False

  main-is:       ohsol.hs
  build-depends:
    , base            ^>=4.22
    , cards           ^>=0.2
    , MonadRandom     ^>=0.6.1
    , random-shuffle  ^>=0.0.4

executable primesnap
  import:        shared-properties

  -- no clock nor getpid
  if arch(wasm32)
    buildable: False

  main-is:       primesnap.hs
  build-depends:
    , base            ^>=4.22
    , cards           ^>=0.2
    , MonadRandom     ^>=0.6.1
    , primes          ^>=0.2.1
    , random-shuffle  ^>=0.0.4

executable faro-shuffles
  import:        shared-properties
  main-is:       faro-shuffles.hs
  build-depends:
    , base   ^>=4.22
    , cards  ^>=0.2
    , extra  ^>=1.8

executable uno
  import:        shared-properties

  -- no clock nor getpid
  if arch(wasm32)
    buildable: False

  main-is:       uno.hs
  build-depends:
    , base            ^>=4.22
    , cards           ^>=0.2
    , extra           ^>=1.8
    , random-shuffle  ^>=0.0.4

test-suite cards-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
  build-tool-depends: hspec-discover:hspec-discover
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      hspec ^>=2.11.15

--   base ^>=4.22
-- , cards
-- , hspec-core ^>=2.11.15
-- , hspec-expectations ^>=0.8.4
-- , QuickCheck ^>=2.17
