cabal-version:       >=1.10
name:                chatter
version:             0.1.0.0
synopsis:            Chat tools
description:         Chat tools for various networks
-- bug-reports:
license:             AGPL-3.0
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          Dan Dart
copyright:           Dan Dart 2019
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable chatter
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5, aeson, bytestring, random, req, safe, text, vector
  hs-source-dirs:      src
  default-language:    Haskell2010
