cabal-version:       >=1.10
name:                chatter
version:             0.1.0.0
synopsis:            Chat tools
description:         Chat tools for various networks
-- bug-reports:
license:             AGPL-3.0
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          Dan Dart
copyright:           Dan Dart 2019
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable chomegle
  main-is:             omegle.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5, aeson, async, bytestring, mtl, random, req, safe, text, unix, vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable chiscord
  main-is:             discord.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5, async, discord-haskell, mtl, process, text, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Lib.Prelude
