cabal-version:      3.4
name:               consolefrp
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-source-files: CHANGELOG.md

executable consolefrp
  main-is:            Main.hs
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:
    , base        >=4.18.0.0 && <5
    , reflex-vty
    , vty

  hs-source-dirs:     src
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
