cabal-version:      3.12
name:               consolefrp
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-source-files: CHANGELOG.md

executable consolefrp
  main-is:            Main.hs
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base        ^>=4.21.0.0
    , reflex-vty  ^>=0.6.1.0
    , vty         ^>=6.4

  hs-source-dirs:     src
  if arch(javascript)
    js-sources: jsbits/emcc-config.js
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  ghc-options:
    -Wall -Werror -haddock
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
