name:                dubloons
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/projects#readme
license:             PublicDomain
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bot
  hs-source-dirs:      src
  main-is:             bot.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , discord-haskell
    , text
    , transformers

executable server
  hs-source-dirs:      src
  main-is:             server.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , aeson
    , bytestring
    , http-types
    , wai
    , warp

executable tasks
  hs-source-dirs:      src
  main-is:             tasks.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , aeson
    , bytestring
    , http-client
    , hxt
    , hxt-xpath
    , mtl
    , safe-foldable
    , req
    , retry
    , text
  other-modules:       Lib.XPath