name:                dubloons
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/projects#readme
license:             PublicDomain
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dubloons
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , aeson
    , bytestring
    , discord-haskell
    , http-client
    , hxt
    , hxt-xpath
    , mtl
    , process
    , safe-foldable
    , req
    , retry
    , text
    , transformers
  other-modules: Lib.Pirate, Lib.Prelude, Lib.XPath